tests/parser-test-files/bad-files/parse-cond.1.error
error: Malformed cond expression
  --> test:4:16
   |
 4 |  (define x (cond))
   |                 ^ expected one or more clauses
